[package]
name = "yblp"
version = "0.1.0"
authors = ["Mikhail Bautin <mbautin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.0.0"
uuid = "0.8"
chrono = "0.4.0"
cursive = "0.16"